# app/routes/api/__init__.py
@@ -6,6 +6,8 @@ from .campaigns import campaigns_bp
 from .ingestions import ingestion_bp
 from .orchestration import orchestration_bp
 from .templates import templates_bp
+from .segments import segments_bp
+
 
 
 # This is the master blueprint for all API routes
@@ -18,3 +20,4 @@ api_bp.register_blueprint(campaigns_bp)
 api_bp.register_blueprint(ingestion_bp)
 api_bp.register_blueprint(orchestration_bp)
 api_bp.register_blueprint(templates_bp)
+api_bp.register_blueprint(segments_bp)
